[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/parteCuerpo.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.3237, 33.0973 )

[sub_resource type="CircleShape2D" id=2]
radius = 48.7469

[node name="parteRobot" type="KinematicBody2D"]
position = Vector2( 0.824718, -0.0451889 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer_Gravedad" type="Timer" parent="."]
wait_time = 0.65
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer_Gravedad" to="." method="_on_Timer_Gravedad_timeout"]
